# Individ-Class-OOP

./: CMakeLists.txt  individ.cpp  individ.h
